test-data/vpc2/json-dumps/compute-disks-europe-west2-b.json
{
  "kind": "compute#diskList",
  "id": "projects/gcpdiag-vpc2-runbook/zones/europe-west2-b/disks",
  "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/zones/europe-west2-b/disks"
}
