test-data/vpc2/json-dumps/compute-instances-europe-west2-b.json
{
  "id": "projects/gcpdiag-vpc2-runbook/zones/europe-west2-b/instances",
  "kind": "compute#instanceList",
  "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/zones/europe-west2-b/instances"
}
