test-data/vpc2/json-dumps/compute-network-default.json
{
  "autoCreateSubnetworks": true,
  "creationTimestamp": "2024-05-30T21:24:04.557-07:00",
  "description": "Default network for the project",
  "id": "7439775982828187147",
  "kind": "compute#network",
  "name": "default",
  "networkFirewallPolicyEnforcementOrder": "AFTER_CLASSIC_FIREWALL",
  "routingConfig": {
    "routingMode": "REGIONAL"
  },
  "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
  "selfLinkWithId": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/7439775982828187147",
  "subnetworks": [
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/asia-east1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/australia-southeast1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/us-east5/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/us-west3/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/us-central1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/us-west4/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/europe-southwest1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/northamerica-northeast2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/southamerica-west1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/us-central1/subnetworks/public-subnet",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/us-west2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/us-west8/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/asia-southeast1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/asia-south1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/us-west1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/europe-central2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/asia-east2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/asia-southeast2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/europe-west10/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/europe-west4/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/europe-west12/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/us-east1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/southamerica-east1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/europe-west2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/europe-west8/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/australia-southeast2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/asia-northeast1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/us-east4/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/europe-west9/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/me-central1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/us-south1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/us-east7/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/asia-northeast3/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/me-west1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/asia-south2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/us-central1/subnetworks/private-subnet",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/africa-south1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/europe-west1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/asia-northeast2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/northamerica-northeast1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/europe-west3/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/europe-west6/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/regions/europe-north1/subnetworks/default"
  ]
}
